# mtfind

./: CMakeLists.txt  README.md
include/: File.h  Forward.h  KMP.h  MtFind.h  Queue.h  Result.h  Search.h  ThreadPool.h
mtfind.xcodeproj/: project.pbxproj
mtfind.xcodeproj/project.xcworkspace/xcuserdata/agaltsevstas.xcuserdatad/: UserInterfaceState.xcuserstate
mtfind1/: mtfind1.vcxproj  mtfind1.vcxproj.filters
src/: File.cpp  KMP.cpp  MtFind.cpp  Result.cpp  Search.cpp  main.cpp
